migrated support for "jqassistant-plugin" to use URIs (as the URL mechanism using a URLStreamHandlerFactory is error prone)